--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,5 @@ test:
 
 production:
   <<: *default
-  database: twitter_production
-  username: twitter
-  password: <%= ENV['TWITTER_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  database: mydatabase
